--- a/file-contents/pom.xml
+++ b/file-contents/pom.xml
@@ -7,20 +7,23 @@
 
 	<properties>
 		<junit.version>4.12</junit.version>
+		<apache.commons.version>1.3.2</apache.commons.version>
 		<mockito.version>1.9.5</mockito.version>
-		<org.springframework.version>2.5.6</org.springframework.version>
+		<log4j.version>1.2.17</log4j.version>
+		<org.springframework.version>4.1.4.RELEASE</org.springframework.version>
+		<spring.version>4.0.0.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
+			<version>${apache.commons.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -33,9 +36,20 @@
 			<version>${mockito.version}</version>
 		</dependency>
 		<dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+ 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 	</dependencies>
 </project>
