--- a/file-contents/pom.xml
+++ b/file-contents/pom.xml
@@ -5,6 +5,14 @@
 	<artifactId>file-contents</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<name>File-contents</name>
+	<description>A simple Maven project designed to give a good understanding of some basic principles around settin gup projects.
+				 Features included are:
+					* Unit tests
+					* Integration tests
+					* Use of mocks
+					* Cucumber feature files</description>
+	
 	<properties>
 		<junit.version>4.12</junit.version>
 		<apache.commons.version>1.3.2</apache.commons.version>
@@ -12,6 +20,9 @@
 		<log4j.version>1.2.17</log4j.version>
 		<org.springframework.version>4.1.4.RELEASE</org.springframework.version>
 		<spring.version>4.0.0.RELEASE</spring.version>
+		<cucumber.version>1.2.4</cucumber.version>
+		<cucumber.jvm.version>1.0.5</cucumber.jvm.version>
+		<guava.version>18.0</guava.version>
 	</properties>
 
 	<dependencies>
@@ -54,27 +65,58 @@
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>1.2.4</version>
+			<version>${cucumber.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-jvm-deps</artifactId>
-			<version>1.0.5</version>
+			<version>${cucumber.jvm.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-java</artifactId>
-			<version>1.2.4</version>
+			<version>${cucumber.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>18.0</version>
+			<version>${guava.version}</version>
 		</dependency>
 	</dependencies>
 
 	<build>
+		<!-- this plugin is required to ensure that "Plugin execution not covered by lifecycle configuration" errors aren't reported for the maven helper plugin -->
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>build-helper-maven-plugin</artifactId>
+										<versionRange>[1.5.0,)</versionRange>
+										<goals>
+											<goal>add-test-source</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 		<plugins>
+			<!-- runs unit tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -85,6 +127,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<!-- runs integration tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
@@ -98,6 +141,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- deploys the src/it/* folders -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
