--- a/file-contents/pom.xml
+++ b/file-contents/pom.xml
@@ -12,8 +12,10 @@
 					* Integration tests
 					* Use of mocks
 					* Cucumber feature files</description>
-	
+
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<junit.version>4.12</junit.version>
 		<apache.commons.version>1.3.2</apache.commons.version>
 		<mockito.version>1.9.5</mockito.version>
@@ -27,7 +29,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>${apache.commons.version}</version>
 		</dependency>
@@ -85,7 +87,8 @@
 	</dependencies>
 
 	<build>
-		<!-- this plugin is required to ensure that "Plugin execution not covered by lifecycle configuration" errors aren't reported for the maven helper plugin -->
+		<!-- this plugin is required to ensure that "Plugin execution not covered 
+			by lifecycle configuration" errors aren't reported for the maven helper plugin -->
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -116,7 +119,7 @@
 		</pluginManagement>
 
 		<plugins>
-			<!-- runs unit tests -->
+			<!-- runs unit tests - note we don't need a profile, i.e. the unit tests will run with a mvn install on its own -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -126,20 +129,6 @@
 						<exclude>**/*/*IT.java</exclude>
 					</excludes>
 				</configuration>
-			</plugin>
-			<!-- runs integration tests -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.18.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<!-- deploys the src/it/* folders -->
 			<plugin>
@@ -164,4 +153,58 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<!-- profile for running integration tests on their own -->
+			<id>IT</id>
+			<build>
+				<plugins>
+					<!-- skip unit tests -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.18.1</version>
+						<configuration>
+							<skipTests>true</skipTests>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>2.18.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<!-- profile for running unit tests as well as integration tests -->
+			<id>UT-and-IT</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>2.18.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
