--- a/file-contents/pom.xml
+++ b/file-contents/pom.xml
@@ -119,17 +119,6 @@
 		</pluginManagement>
 
 		<plugins>
-			<!-- runs unit tests - note we don't need a profile, i.e. the unit tests will run with a mvn install on its own -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
-				<configuration>
-					<excludes>
-						<exclude>**/*/*IT.java</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
 			<!-- deploys the src/it/* folders -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -151,60 +140,58 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- runs unit tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*/*IT.java</exclude>
+					</excludes>
+					<skipTests>${skip.unit.tests}</skipTests>
+				</configuration>
+			</plugin>
+
+			<!-- runs integration tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<skipTests>${skip.integration.tests}</skipTests>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
 	<profiles>
+		<!-- profile for running unit tests on their own -->
 		<profile>
-			<!-- profile for running integration tests on their own -->
+			<id>UT</id>
+			<properties>
+				<skip.unit.tests>false</skip.unit.tests>
+				<skip.integration.tests>true</skip.integration.tests>
+			</properties>
+		</profile>
+
+		<!-- profile for running integration tests on their own -->
+		<profile>
 			<id>IT</id>
-			<build>
-				<plugins>
-					<!-- skip unit tests -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.18.1</version>
-						<configuration>
-							<skipTests>true</skipTests>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>2.18.1</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
+			<properties>
+				<skip.unit.tests>true</skip.unit.tests>
+				<skip.integration.tests>false</skip.integration.tests>
+			</properties>
 		</profile>
-		<profile>
-			<!-- profile for running unit tests as well as integration tests -->
-			<id>UT-and-IT</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>2.18.1</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+
 	</profiles>
 </project>
